# paradisaea-apoda

./: LICENSE  README.md  pyproject.toml
src/apoda/: __init__.py  generators.py  schemas.py  style.py  styles.py  themes.py
