[project]
name = "paradisaea-apoda"
version = "0.1.0"
description = "Lightweight plotting utilities and colour palettes for clean, consistent visualisations."
readme = "README.md"
authors = [
    { name = "Jesse Heckman", email = "jesse.heckman@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cycler>=0.12.1",
    "matplotlib>=3.10.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apoda"]
